--- a/development/footer.html
+++ b/development/footer.html
@@ -1,19 +1,5 @@
         <!-- Footer -->
         <footer>
-            <div class="row">
-                <div class="col-lg-3">
-                    <p>Toll Free <a href="tel:18883357875">1-888-335-7875</a></p>
-                </div>
-                <div class="col-lg-3">
-                    <p><a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a></p>
-                </div>
-                <div class="col-lg-2">
-                    <p><a href="">Privacy Policy</a></p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Join Newsletter <a href=""></a></p>
-                </div>
-            </div>
 
             <div class="row social">
                 <div class="col-lg-12">
@@ -25,13 +11,23 @@
                         <li><a href="" target="blank" class="fa fa-linkedin " alt="linkedin"></a></li>
                         <li><a href="tel:18883357875" class="fa fa-phone " alt="phone"></a></li>
                         <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o " alt="email"></a></li>
+                        <li><a href="" class="fa fa-shopping-cart"></a></li>
                     </ul>
                 </div>
             </div>  
               
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-4">
+                <small>
+                    <p><a href="">Privacy Policy</a></p>
                     <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
+                </small>
+                </div>
+                <div class="col-lg-4">
+                    <p>Toll Free <a href="tel:18883357875">1-888-335-7875</a></p>
+                </div>
+                <div class="col-lg-4">
+                    <p><a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a></p>
                 </div>
             </div>
         </footer>
