--- a/development/header.html
+++ b/development/header.html
@@ -11,11 +11,14 @@
 
     <title>Sport Scope</title>
 
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -110,7 +113,6 @@
                         <li>
                             <a href="services.html">Contact</a>
                         </li>
-                        <li><a href="" target="blank" class="fa fa-shopping-cart fa-lg" alt="shopping cart"></a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
