--- a/development/index.html
+++ b/development/index.html
@@ -1,14 +1,14 @@
 @@include('./header.html')  
-<!-- Header Carousel -->
-<header id="myCarousel" class="carousel slide">
-    <!-- Indicators -->
+<!-- Header Carousel
+<header id="myCarousel" class="carousel slide"> -->
+    <!-- Indicators 
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+    </ol> -->
 
-    <!-- Wrapper for slides -->
+    <!-- Wrapper for slides 
     <div class="carousel-inner">
         <div class="item active">
             <div class="fill" style="background-image:url('img/30sportScope/DSC_0110.JPG');"></div>
@@ -28,28 +28,31 @@
                 <h2>Or Just Saying "Hello".</h2>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <!-- Controls -->
+    <!-- Controls 
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="icon-prev"></span>
     </a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">
         <span class="icon-next"></span>
     </a>
-</header>
+</header> -->
 
 <!-- Page Content -->
+<div class="home">
 <div class="container">
 
     <!-- Marketing Icons Section -->
-    <div class="row">
+    <div class="row first-on-page">
         <div class="col-lg-12">
-            <h3 class="page-header left">Popular Products</h3>
-        </div>
+            <h1 class="picture-text">Rise above the competition.</h1>
+        </div>    
+    </div>
+        <div class="row">
         <div class="col-md-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
+            <div class="panel panel-default panel-home">
+                <div class="panel-heading product">
                     <h4>Sport Scope 30'</h4>
                 </div>
                 <div class="panel-body">
@@ -69,45 +72,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4><img class="edge-logo" src="img/edge.svg" alt="EDGE replay software"></h4>
-                </div>
-                <div class="panel-body">
-                    <h4>$1,995 for Single View</h4>
-                    <h4>$2,995 for Double View</h4>
-                    <ul>     
-                       <li>Connect existing HD cameras to system</li>
-                       <li>Record plays with EDGE software</li>
-                       <li>View plays on iPad in 2-3 seconds</li>
-                       <li>Upload video and ODK directly into Hudl</li>
-                   </ul>
-                   <a href="#" class="btn btn-default">Learn More</a>
-               </div>
-           </div>
-       </div>
-        <div class="col-md-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4>Quick Scope 16'</h4>
-                </div>
-                <div class="panel-body">
-                    <h4>$2,299</h4>
-
-                    <ul>
-                        <li>Set Up in 3 Minutes</li>
-                        <li>16 ft. Extended Height</li>
-                        <li>Weighs 15 lbs.</li>
-                        <li>10 yr. Frame Warranty</li>
-                        <li>HD Camera and 9" Monitor</li>
-                        <li>Everything Included</li>
-                    </ul>
-
-                    <a href="./quick-scope-16.html" class="btn btn-default">Learn More</a>
-                </div>
-            </div>
-        </div>
+        
    </div>
    <!-- /.row -->
 
@@ -187,7 +152,9 @@
     </div>
 </div>
 -->
-
+</div>
+</div>
+<div class="container">
 <hr>
 @@include('./footer.html')  
 
