--- a/development/index.html
+++ b/development/index.html
@@ -1,6 +1,6 @@
 @@include('./header.html')  
 <!-- Header Carousel
-<header id="myCarousel" class="carousel slide"> -->
+    <header id="myCarousel" class="carousel slide"> -->
     <!-- Indicators 
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -41,40 +41,51 @@
 
 <!-- Page Content -->
 <div class="home">
-<div class="container">
+    <div class="container">
 
-    <!-- Marketing Icons Section -->
-    <div class="row first-on-page">
-        <div class="col-lg-12">
-            <h1 class="picture-text">Rise above the competition.</h1>
-        </div>    
-    </div>
-        <div class="row">
-        <div class="col-md-4">
+        <!-- Marketing Icons Section -->
+        <div class="row first-on-page">
+            <div class="col-lg-10">
+                <h1 class="picture-text">Rise above the competition.</h1>
+            </div>
+            <a href="#"><div class="col-lg-2 edge-ad">
+             <img src="./img/edge.svg" alt="Edge Replay">
+             <p>Realtime replay in seconds.</p>
+
+         </div></a>
+     </div> 
+     <div class="row">
+        <div class="col-lg-6"></div>
+        <div class="col-lg-6">
             <div class="panel panel-default panel-home">
                 <div class="panel-heading product">
                     <h4>Sport Scope 30'</h4>
                 </div>
                 <div class="panel-body">
-                    <h4>$4,199</h4>
-                    <h6>(Offer through March 31, 2016)</h6>
-
-                    <ul>
-                        <li>Automatic Camera Controls</li>
-                        <li>30 ft. Extended Height</li>
-                        <li>10 yr. Frame Warranty</li>
-                        <li>Easy Set-up and Operation</li>
-                        <li>Everything Included</li>
-                        <li>HD Camera and 9" Monitor</li>
-                        <li>Choice of Tower Color</li>
-                    </ul>
-                    <a href="./sport-scope-30.html" class="btn btn-default">Learn More</a>
+                    <div class="col-md-6">
+                        <ul>
+                            <li>Automatic Camera Controls</li>
+                            <li>30 ft. Extended Height</li>
+                            <li>10 yr. Frame Warranty</li>
+                            <li>Easy Set-up and Operation</li>
+                            <li>Everything Included</li>
+                            <li>HD Camera and 9" Monitor</li>
+                            <li>Choice of Tower Color</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h3 class="offer">$300 off</h3><p class="offer"> your 30' endzone camera order!</p>
+                        <h2>$4,199</h2>
+                        <h6>(Offer through March 31, 2016)</h6>
+                        
+                        <a href="./sport-scope-30.html" class="btn btn-default">Learn More</a>
+                    </div>
                 </div>
             </div>
         </div>
         
-   </div>
-   <!-- /.row -->
+    </div>
+    <!-- /.row -->
 
    <!-- Portfolio Section
    <div class="row">
@@ -112,7 +123,7 @@
         </a>
     </div>
 </div>
- /.row -->
+/.row -->
 
 <!-- Features Section
 <div class="row">
@@ -155,6 +166,6 @@
 </div>
 </div>
 <div class="container">
-<hr>
-@@include('./footer.html')  
+    <hr>
+    @@include('./footer.html')  
 
