--- a/sport-scope-25.html
+++ b/sport-scope-25.html
@@ -13,7 +13,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -54,11 +54,9 @@
             <div class="row social">
                 <div class="col-lg-12">
                     <ul>
-                        <li><a href="" target="blank" class="fa fa-facebook " alt="facebook"></a></li>
-                        <li><a href="" target="blank" class="fa fa-twitter " alt="twitter"></a></li>
-                        <li><a href="" target="blank" class="fa fa-youtube " alt="youtube"></a></li>
-                        <li><a href="" target="blank" class="fa fa-google-plus " alt="google plus"></a></li>
-                        <li><a href="" target="blank" class="fa fa-linkedin " alt="linkedin"></a></li>
+                        <li><a href="" target="blank" class="fa fa-facebook" alt="facebook"></a></li>
+                        <li><a href="" target="blank" class="fa fa-twitter" alt="twitter"></a></li>
+                        <li><a href="" target="blank" class="fa fa-youtube-play" alt="youtube"></a></li>
                         <li><a href="tel:18883357875" class="fa fa-phone " alt="phone"></a></li>
                         <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o " alt="email"></a></li>
                         <li><a href="" class="fa fa-shopping-cart"></a></li>
@@ -68,6 +66,8 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Endzone Cameras <b class="caret"></b></a>
                             <ul class="dropdown-menu">
+                                <li><a href="products.html">All Products</a></li>
+                                <li role="separator" class="divider"></li>
                                 <li>
                                     <a href="sport-scope-30.html">Sport Scope 30'</a>
                                 </li>
@@ -83,6 +83,7 @@
                                 <li>
                                     <a href="press-box.html">Press Box</a>
                                 </li>
+                                <li role="separator" class="divider"></li>
                                 <li>
                                     <a href="accessories.html">Accessories</a>
                                 </li>
@@ -105,6 +106,7 @@
                                 <li>
                                     <a href="about.html">History</a>
                                 </li>
+                                <li><a href="community.html">Community</a></li>
                                 <li>
                                     <a href="blog-post.html">Blog</a>
                                 </li>
@@ -475,19 +477,24 @@
 
               
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p><a href="">Privacy Policy</a></p>
+
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p>Toll Free <a href="tel:18883357875">1-888-335-7875</a></p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p><a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a></p>
+                </div>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-2">
+                    <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <small>
+                <small class="center">
                     <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
                 </small>
                 </div>
