--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -54,11 +54,9 @@
             <div class="row social">
                 <div class="col-lg-12">
                     <ul>
-                        <li><a href="" target="blank" class="fa fa-facebook " alt="facebook"></a></li>
-                        <li><a href="" target="blank" class="fa fa-twitter " alt="twitter"></a></li>
-                        <li><a href="" target="blank" class="fa fa-youtube " alt="youtube"></a></li>
-                        <li><a href="" target="blank" class="fa fa-google-plus " alt="google plus"></a></li>
-                        <li><a href="" target="blank" class="fa fa-linkedin " alt="linkedin"></a></li>
+                        <li><a href="" target="blank" class="fa fa-facebook" alt="facebook"></a></li>
+                        <li><a href="" target="blank" class="fa fa-twitter" alt="twitter"></a></li>
+                        <li><a href="" target="blank" class="fa fa-youtube-play" alt="youtube"></a></li>
                         <li><a href="tel:18883357875" class="fa fa-phone " alt="phone"></a></li>
                         <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o " alt="email"></a></li>
                         <li><a href="" class="fa fa-shopping-cart"></a></li>
@@ -68,6 +66,8 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Endzone Cameras <b class="caret"></b></a>
                             <ul class="dropdown-menu">
+                                <li><a href="products.html">All Products</a></li>
+                                <li role="separator" class="divider"></li>
                                 <li>
                                     <a href="sport-scope-30.html">Sport Scope 30'</a>
                                 </li>
@@ -83,6 +83,7 @@
                                 <li>
                                     <a href="press-box.html">Press Box</a>
                                 </li>
+                                <li role="separator" class="divider"></li>
                                 <li>
                                     <a href="accessories.html">Accessories</a>
                                 </li>
@@ -105,6 +106,7 @@
                                 <li>
                                     <a href="about.html">History</a>
                                 </li>
+                                <li><a href="community.html">Community</a></li>
                                 <li>
                                     <a href="blog-post.html">Blog</a>
                                 </li>
@@ -140,7 +142,7 @@
     <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
+        <div class="row first-row">
             <div class="col-lg-12">
                 <h1 class="page-header">About Sport Scope
                     <small></small>
@@ -169,20 +171,6 @@
         </div>
         <!-- /.row -->
 
-<!-- Intro Content -->
-        <div class="row">
-            <div class="col-md-6">
-                <h2 class="title">About Our Endzone Camera</h2>
-                <p>The first thing we focused on with our design was quality and cost. Our design is extremely simple, easy to fabricate, easy to build, and therefore much less expensive than the industry norm. With the extra savings from our design, we decided to include everything you would need to film and then some. This means our standard package comes with all the extended batteries, memory, cables, rain gear, etc. that is needed to film in any condition for 7-8 hrs. We also included a sports chair so the operator can sit down while they film. Sitting down during filming is possible with our system because the operator can control all the functions and movement of the camera from two remotes in the control area.</p>
-
-<p>The next important part of our endzone camera system was how to control the camera's movements.  We use our customized automatic pan tilt head and joystick remote to control the movement of the camera in tandem with a small Sony remote that controls the camera's functions like zoom in/out and record. The quality construction, easy set up, and smooth operation makes Sport Scope Endzone Camera the best way to get elevated film and will help your team rise above the competition.</p>
- </p>
-            </div>
-            <div class="col-md-6">
-                <iframe class="img-responsive iframe-large" src="https://www.youtube.com/embed/yNaDBX4WUuY" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-        <!-- /.row -->
 
         
 
@@ -193,19 +181,24 @@
 
               
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p><a href="">Privacy Policy</a></p>
+
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p>Toll Free <a href="tel:18883357875">1-888-335-7875</a></p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p><a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a></p>
+                </div>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-2">
+                    <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <small>
+                <small class="center">
                     <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
                 </small>
                 </div>
