--- a/footer.html
+++ b/footer.html
@@ -3,19 +3,24 @@
 
               
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p><a href="">Privacy Policy</a></p>
+
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p>Toll Free <a href="tel:18883357875">1-888-335-7875</a></p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <p><a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a></p>
+                </div>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-2">
+                    <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <small>
+                <small class="center">
                     <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
                 </small>
                 </div>
