--- a/development/footer.html
+++ b/development/footer.html
@@ -1,4 +1,5 @@
         <!-- Footer -->
+        <div class="container">
         <footer>
 
               
@@ -26,6 +27,7 @@
                 </div>
             </div>
         </footer>
+    </div>
 
     </div>
     <!-- /.container -->
