--- a/development/index.html
+++ b/development/index.html
@@ -1,25 +1,27 @@
 @@include('./header.html')  
 
 <!-- Page Content -->
-<div class="home">
-    <div class="container">
+<div class="container-fluid first-row photo1">
 
-        <!-- Marketing Icons Section -->
-        <div class="row first-row">
-            <div class="col-lg-9">
-                <h1 class="picture-text">Rise above the competition.</h1>
+
+
+    <!-- Marketing Icons Section -->
+    <div class="row">
+        <div class="col-lg-9">
+            <h1 class="picture-text">Rise above the competition.</h1>
+        </div>
+        <a href="#">
+            <div class="col-lg-3 edge-ad">
+                <img src="./img/edge.svg" alt="Edge Replay">
+                <h4>Realtime replay in seconds.</h4>
             </div>
-            <a href="#"><div class="col-lg-3 edge-ad">
-               <img src="./img/edge.svg" alt="Edge Replay">
-               <h4>Realtime replay in seconds.</h4>
-
-           </div></a>
-       </div> 
-       <div class="row">
+        </a>
+    </div> 
+    <div class="row">
         <div class="col-lg-6">
             <div class="panel panel-default panel-home">
                 <div class="panel-heading product">
-                    <h1>Sport Scope 30'</h1>
+                    <h2>Sport Scope 30'</h2>
                 </div>
                 <div class="panel-body">
                     <div class="col-md-6">
@@ -32,24 +34,23 @@
                             <li>HD Camera and 9" Monitor</li>
                             <li>Choice of Tower Color</li>
                         </ul>
-                            <a href="#" type="button" class="btn btn-xs btn-features">Made in the USA</a>
-                            <a href="#" type="button" class="btn btn-xs btn-features">Hudl ready</a>
+                        <a href="#" type="button" class="btn btn-xs btn-features">Made in the USA</a>
+                        <a href="#" type="button" class="btn btn-xs btn-features">Hudl ready</a>
                     </div>
                     <div class="col-md-6 center">
-                        <h2 class="offer">$300 off</h2><h4 class="offer"> your 30' endzone camera order!</h4>
-                        <h1>$4,199</h1>
+                        <h3 class="offer">$300 off</h3><h4 class="offer"> your 30' endzone camera order!</h4>
+                        <h2>$4,199</h2>
                         <h6>(Offer through March 31, 2016)</h6>
                         <a href="./sport-scope-30.html" class="btn btn-default">Learn More</a>
-                        
+
                     </div>
-                    
+
                 </div>
             </div>
         </div>
-</div>
-<div class="col-lg-6"></div>
+    </div>
+    <div class="col-lg-6"></div>
 
-</div>
 <!-- /.row -->
 
    <!-- Portfolio Section
@@ -129,8 +130,6 @@
 </div>
 -->
 </div>
-</div>
-<div class="container">
-    <hr>
-    @@include('./footer.html')  
+<hr>
+@@include('./footer.html')  
 
