--- a/development/sport-scope-30.html
+++ b/development/sport-scope-30.html
@@ -68,7 +68,7 @@
 
 <!-- Included Items -->
 <section>    
-    <div class="container-fluid photo2">
+    <div class="container-fluid photo-bg" style="background-image: url(../img/30sportScope/DSC_0068.JPG)">
 
 
         <div class="row">
