--- a/development/index.html
+++ b/development/index.html
@@ -1,7 +1,7 @@
 @@include('./header.html')  
 
 <!-- Page Content -->
-<div class="container-fluid first-row photo1">
+<div class="container-fluid first-row photo-bg" style="background-image: url(../img/30sportScope/DSC_0127.JPG)">
 
 
 
