--- a/blog-post.html
+++ b/blog-post.html
@@ -106,7 +106,7 @@
                                 <li>
                                     <a href="about.html">History</a>
                                 </li>
-                                <li><a href="community.html">Community</a></li>
+                                
                                 <li>
                                     <a href="blog-post.html">Blog</a>
                                 </li>
@@ -137,7 +137,10 @@
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
-        </nav>  
+        </nav>
+
+
+  
 
     <!-- Page Content -->
     <div class="container">
@@ -305,6 +308,7 @@
 
         <hr>
         <!-- Footer -->
+        <div class="container">
         <footer>
 
               
@@ -332,6 +336,7 @@
                 </div>
             </div>
         </footer>
+    </div>
 
     </div>
     <!-- /.container -->
