--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                                 <li>
                                     <a href="about.html">History</a>
                                 </li>
-                                <li><a href="community.html">Community</a></li>
+                                
                                 <li>
                                     <a href="blog-post.html">Blog</a>
                                 </li>
@@ -138,6 +138,9 @@
             </div>
             <!-- /.container -->
         </nav>
+
+
+
     <!-- Page Content -->
     <div class="container">
 
@@ -177,6 +180,7 @@
         <hr>
 
         <!-- Footer -->
+        <div class="container">
         <footer>
 
               
@@ -204,6 +208,7 @@
                 </div>
             </div>
         </footer>
+    </div>
 
     </div>
     <!-- /.container -->
