--- a/accessories.html
+++ b/accessories.html
@@ -106,7 +106,7 @@
                                 <li>
                                     <a href="about.html">History</a>
                                 </li>
-                                <li><a href="community.html">Community</a></li>
+                                
                                 <li>
                                     <a href="blog-post.html">Blog</a>
                                 </li>
@@ -137,7 +137,10 @@
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
-        </nav>  
+        </nav>
+
+
+  
 <!-- Team Members -->
 <div class="container">
 
@@ -288,6 +291,7 @@
         </div>
         <!-- /.row -->
         <!-- Footer -->
+        <div class="container">
         <footer>
 
               
@@ -315,6 +319,7 @@
                 </div>
             </div>
         </footer>
+    </div>
 
     </div>
     <!-- /.container -->
