--- a/community.html
+++ b/community.html
@@ -106,7 +106,7 @@
                                 <li>
                                     <a href="about.html">History</a>
                                 </li>
-                                <li><a href="community.html">Community</a></li>
+                                
                                 <li>
                                     <a href="blog-post.html">Blog</a>
                                 </li>
@@ -137,9 +137,13 @@
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
-        </nav>;
+        </nav>
+
+
+;
 
         <!-- Footer -->
+        <div class="container">
         <footer>
 
               
@@ -167,6 +171,7 @@
                 </div>
             </div>
         </footer>
+    </div>
 
     </div>
     <!-- /.container -->
