--- a/portfolio-2-col.html
+++ b/portfolio-2-col.html
@@ -106,7 +106,7 @@
                                 <li>
                                     <a href="about.html">History</a>
                                 </li>
-                                <li><a href="community.html">Community</a></li>
+                                
                                 <li>
                                     <a href="blog-post.html">Blog</a>
                                 </li>
@@ -137,7 +137,10 @@
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
-        </nav>  
+        </nav>
+
+
+  
 
 
     <!-- Page Content -->
@@ -262,6 +265,7 @@
         <hr>
 
         <!-- Footer -->
+        <div class="container">
         <footer>
 
               
@@ -289,6 +293,7 @@
                 </div>
             </div>
         </footer>
+    </div>
 
     </div>
     <!-- /.container -->
