--- a/products.html
+++ b/products.html
@@ -106,7 +106,7 @@
                                 <li>
                                     <a href="about.html">History</a>
                                 </li>
-                                <li><a href="community.html">Community</a></li>
+                                
                                 <li>
                                     <a href="blog-post.html">Blog</a>
                                 </li>
@@ -137,7 +137,10 @@
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
-        </nav>;
+        </nav>
+
+
+;
 <div class="container">
 <!-- Service Panels -->
         <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
@@ -224,6 +227,7 @@
             </div>
         </div>
         <!-- Footer -->
+        <div class="container">
         <footer>
 
               
@@ -251,6 +255,7 @@
                 </div>
             </div>
         </footer>
+    </div>
 
     </div>
     <!-- /.container -->
