--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   
 
 <!-- Page Content -->
-<div class="container-fluid first-row photo-bg" style="background-image: url(../img/30sportScope/DSC_0127.JPG)">
+<div class="container-fluid first-row photo-bg" style="background-image: url(./img/30sportScope/DSC_0127.JPG)">
 
 
 
