--- a/sport-scope-30.html
+++ b/sport-scope-30.html
@@ -210,7 +210,7 @@
 
 <!-- Included Items -->
 <section>    
-    <div class="container-fluid photo-bg" style="background-image: url(../img/30sportScope/DSC_0068.JPG)">
+    <div class="container-fluid photo-bg" style="background-image: url(./img/30sportScope/DSC_0068.JPG)">
 
 
         <div class="row">
